--- a/index.html
+++ b/index.html
@@ -388,6 +388,9 @@
 						<a href="https://github.com/trquth"></a>GitHub/trquth</li>
 					<li>Hey there! I am Ricky Singh and my profile link is
 						<a href="https://github.com/xyzricky">https://github.com/xyzricky</a></li>
+				<li>Hey there! I am Oarabile Mwiya and my profile link is
+						<a href="https://github.com/OarabileMwiya">https://github.com/OarabileMwiya</a></li>
+			
 				</b>
 			</ol>
 
